svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chartmuseum
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: chartmuseum
