route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chartmuseum
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: chartmuseum
    weight: 100
  wildcardPolicy: None
